--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -1,6 +1,6 @@
 <h1 align="center" class="display-4 mb-5">Carrello</h1>
 
-<!--Cart Detail Table-->
+<!--Tabella dei dettagli del carrello-->
 <table class="table table-striped text-center">
     <thead>
     <tr>
